# dbt-practice

./: .gitignore  README.md  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml  run_dbt.py
.bkit/audit/: 2026-04-05.jsonl
.bkit/state/: memory.json  pdca-status.json  session-history.json
dbt-spark-adapter/.hive-metastore/: pg_hba.conf  postmaster.pid
dbt-spark-adapter/.hive-metastore/global/: 1136_vm  1213_vm  1214  1214_vm  1260  1260_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  pg_control  pg_internal.init
dbt-spark-adapter/.hive-metastore/pg_stat_tmp/: db_0.stat  db_12404.stat  db_16384.stat  global.stat
dbt-spark-adapter/.spark-warehouse/dim_customers/: .part-00000-c934acd4-8d3e-4988-9ff7-5196c413d01d-c000.crc  .part-00001-c934acd4-8d3e-4988-9ff7-5196c413d01d-c000.crc  .part-00002-c934acd4-8d3e-4988-9ff7-5196c413d01d-c000.crc  .part-00003-c934acd4-8d3e-4988-9ff7-5196c413d01d-c000.crc  .part-00004-c934acd4-8d3e-4988-9ff7-5196c413d01d-c000.crc  .part-00005-c934acd4-8d3e-4988-9ff7-5196c413d01d-c000.crc  .part-00006-c934acd4-8d3e-4988-9ff7-5196c413d01d-c000.crc  .part-00007-c934acd4-8d3e-4988-9ff7-5196c413d01d-c000.crc  .part-00008-c934acd4-8d3e-4988-9ff7-5196c413d01d-c000.crc  .part-00009-c934acd4-8d3e-4988-9ff7-5196c413d01d-c000.crc  (+14 more)
dbt-spark-adapter/docker/: spark-defaults.conf  spark.Dockerfile
dbt_spark_practice/: dbt_project.yml
dbt_spark_practice/macros/: cents_to_dollars.sql
macros/: cents_to_dollars.sql
models/marts/: schema.yml
models/staging/: schema.yml  stg_payments.sql
(+261 files in other folders)
