[project]
name = "dbt-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "salswl215",email = "lyn7666@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "dbt-spark[pyhive] (>=1.10.1,<2.0.0)",
    "pure-sasl (>=0.6.2,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
